fix: dialog header z-index

--- a/src/widgets/main/Dialog/index.module.css
+++ b/src/widgets/main/Dialog/index.module.css
@@ -18,6 +18,7 @@
   top: 0;
   left: 0;
   background-color: var(--itmo-colors-white);
+  z-index: 100;
 }
 
 .name {
